--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.reverse {
+  transform: rotate(180deg);
+}
+
+.row {
+  font-size: 100px;
+  padding-left: 20px;
+}
+
+.container {
+  border-radius: 25px; /*Usé css para poner las esquinas redondeadas porque con bootstrap no pude colocar el radio que yo quería*/
+}
